@@ -48,6 +48,14 @@
 #size         8.20  8.20  10.25
 #end
 
+# Typical base
+#base 
+#position <x> <y> <z> 
+#rotation deg -- not yet supported
+#size 30.0 30.0 0.0 -- height not yet supported
+#color <team number> 
+#end
+
 # Minimal world
 
 #pyramid
@@ -382,4 +390,25 @@ end
 link
 from 15
 to 13
+end
+
+base 
+position -370.0 0.0 0.0 
+size 30.0 30.0 30.0
+color 1 
+end
+base 
+position 370.0 0.0 0.0 
+size 30.0 30.0 30.0
+color 2 
+end
+base 
+position 0.0 -370.0 0.0 
+size 30.0 30.0 30.0
+color 3 
+end
+base 
+position 0.0 370.0 0.0 
+size 30.0 30.0 30.0
+color 4 
 end
